--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
-onnxruntime>=1.12.0
-numpy>=1.21.0
+onnxruntime==1.22.1
+numpy==2.3.2
+torch==2.8.0
+torchaudio==2.8.0
+numba==0.60.0
+llvmlite==0.43.0
+librosa==0.11.0
+matplotlib==3.10.6
+tqdm==4.67.1
+mido==1.3.3
+mir_eval==0.8.2
+soundfile==0.13.1
+scipy==1.16.1
+tensorboard
